# SimpleNoteDesktop

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  model.rs  settings.rs  storage.rs
