[package]
name = "simplenote"
version = "0.1.0"
edition = "2021"
description = "SimpleNote Desktop - lightweight portable memo app (SimpleTask compatible)"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
